Settings to connect DB

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "TurnosContext": "Data Source=.\\;Initial Catalog=Turnos;Persist Security Info=false;Trusted_Conecction=True"
+  },
   "AllowedHosts": "*"
 }
